# hse-python-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tox.ini
.github/workflows/: tests.yml
docs/load_test/: dashboard.json
docs/monitoring/: dashboard.json
homework_1/: errors.py  math_functions.py  service.py
homework_2/: main.py
homework_2/core/entities/: __init__.py  cart.py  cart_item.py  item.py
homework_2/core/repositories/: __init__.py
homework_2/core/repositories/cart_repository/: __init__.py  i_cart_repository.py
homework_2/core/repositories/cart_repository/dto/: __init__.py  update_items_cart_dto.py
homework_2/core/repositories/item_repository/: __init__.py  i_item_repository.py
homework_2/core/services/: __init__.py  cart_service.py  item_service.py
homework_2/core/services/interfaces/: __init__.py  i_cart_service.py  i_item_service.py
homework_2/infrastructure/controllers/: cart_controller.py  dependencies.py  item_controller.py  routers.py
homework_2/infrastructure/db/: utils.py
homework_2/infrastructure/db/entities/: cart_entity.py  carts_items.py  item_entity.py
homework_2/infrastructure/db/mappers/: __init__.py  cart_mapper.py
homework_2/infrastructure/db/repositories/: __init__.py  cart_repository.py  item_repository.py
homework_4/api/: contracts.py  main.py  users.py  utils.py
tests/: conftest.py  test_homework_1.py  test_homework_2.py
tests/homework_4/api/: test_contracts.py  test_users.py  test_utils.py
tests/homework_4/core/: test_users.py
tests/load_tests/: locustfile.py
(+4 files in other folders)
