[tool.poetry]
name = "hse-python-backend"
version = "0.1.0"
description = ""
authors = ["Ilya Katun <katun.ilya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.6"
fastapi = "^0.114.2"
requests = "^2.32.3"
tox = "^4.19.0"
types-requests = "^2.32.0.20240914"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
mypy = "^1.11.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
