[tool.poetry]
name = "homework_4"
version = "0.0.1"
description = ""
authors = ["Ilya Katun <katun.ilya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.6"
fastapi = "^0.114.2"
requests = "^2.32.3"
sqlalchemy = "^2.0.35"
aiosqlite = "^0.20.0"
prometheus-fastapi-instrumentator = "^7.0.0"
locust = "^2.31.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
mypy = "^1.11.2"
flake8 = "^7.1.1"
tox = "^4.19.0"
faker = "^30.0.0"
httpx = "^0.27.2"
async-asgi-testclient = "^1.4.11"
pytest-asyncio = "^0.24.0"
types-requests = "^2.32.0.20240914"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::Warning"
]

[tool.mypy]
mypy_path = "homework_4"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
